# boiler-3d

./: .gitignore  .gitmodules  CMakeLists.txt
data/: hallway.glb  shaders
shaders/: compile.bat  compile.sh  debug.frag  debug.vert  deferred.frag  frag.spv  gbuffer.frag  gbuffer.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  ui.frag  ui.vert  vert.spv
src/: damagecomponent.h  damagedealercomponent.h  damagedealersystem.cpp  damagedealersystem.h  damagesystem.cpp  damagesystem.h  extralivescomponent.h  healthcomponent.h  main.cpp  multiplelifesystem.cpp  multiplelifesystem.h  paddlemovementsystem.cpp  paddlemovementsystem.h  samplepart.cpp  samplepart.h  scorecomponent.h  scoringsystem.cpp  scoringsystem.h
